fixing design issues on iphone.

--- a/style.css
+++ b/style.css
@@ -326,7 +326,9 @@ nav ul li a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 400px; /* Adjusts height */
+    /*overflow: hidden;*/
+    width: 100%;
+    height: 600px; /* Adjusts height */
     margin-top: 150px; /* Adds margin to create space above the contact section */
     margin-bottom: 150px; /* Adds margin to create space below the contact section */
 }
